<resources>
    <string name="app_name">SEUNotify</string>
    <string name="sign_out">Sign Out</string>
    <string name="add">Add New Notification</string>
    <string name="tit">Title:</string>
    <string name="body">Body:</string>
    <string name="pDate">Publish Date:</string>
    <string name="photo">Photo:</string>
    <string name="send">Send</string>
    <string name="canecl">Cancel</string>
    <string name="title">Title</string>
    <string name="bodymesg">Body</string>
    <string name="date">Publish Date</string>

</resources>
