<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="313dp"
        android:layout_height="374dp"
        android:layout_marginTop="172dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tit"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/msgtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bodytxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pDate"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/datetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/photoPickerButton"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/canecl" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/add"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
